[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/Lobby/PreLobbyHouse.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Lobby/PreLobbyHouse.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.75, 84.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 114.25, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.125, 56.625 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 58.0625, 76.0547 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="mapa" type="Sprite" parent="."]
position = Vector2( 462, 337 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="mapa"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="mapa/StaticBody2D"]
polygon = PoolVector2Array( -431, -92, -432, -220, 425, -220, 427, 302, 106, 304, 107, 338, 460, 338, 457, -336, -463, -338, -458, -91 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="mapa/StaticBody2D"]
polygon = PoolVector2Array( -460, -97, -457, 333, 102, 333, -120, 332, -120, 306, -429, 306, -431, 91, -455, 90 )

[node name="PreLobbyRoom" type="Area2D" parent="mapa"]

[node name="PreLobbyRoom" type="CollisionShape2D" parent="mapa/PreLobbyRoom"]
position = Vector2( -467.75, 0.75 )
shape = SubResource( 1 )

[node name="Lobby" type="Area2D" parent="mapa"]

[node name="Lobby" type="CollisionShape2D" parent="mapa/Lobby"]
position = Vector2( -9.25, 333 )
shape = SubResource( 2 )

[node name="NPC" type="Area2D" parent="mapa"]

[node name="NPC" type="CollisionShape2D" parent="mapa/NPC"]
position = Vector2( -291.125, -145.625 )
shape = SubResource( 3 )

[node name="NPCs" type="Area2D" parent="mapa"]

[node name="NPCs" type="CollisionShape2D" parent="mapa/NPCs"]
position = Vector2( 370, -137 )
shape = SubResource( 7 )

[connection signal="body_entered" from="mapa/PreLobbyRoom" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="mapa/PreLobbyRoom" to="." method="_on_PreLobbyRoom_body_entered"]
[connection signal="body_entered" from="mapa/Lobby" to="." method="_on_Lobby_body_entered"]
[connection signal="body_entered" from="mapa/NPC" to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="mapa/NPC" to="." method="_on_NPC_body_exited"]
[connection signal="body_entered" from="mapa/NPCs" to="." method="_on_NPCs_body_entered"]
[connection signal="body_exited" from="mapa/NPCs" to="." method="_on_NPCs_body_exited"]
